# init-app

./: .gitignore  MANIFEST.in  README.md  requirements-dev.txt  setup.cfg
compiler/: main.c  utils.h
compiler/core/: engine.c  engine.h
compiler/platform/: actions.c  actions.h
create_app/: constants.py  path_config.py
create_app/common/: README.md.tpl  apps.py.tpl  entry.py.tpl  env.tpl  secret.tpl  venv.txt.tpl  work.txt.tpl
create_app/common/static/css/: style.css.tpl
create_app/common/static/scripts/: script.js.tpl
create_app/common/template/: index.html.tpl
create_app/engine/: cli.py  prompts.py
create_app/framework/: bundler.py
create_app/initializer/: controller.py  generator.py
create_app/rules/: others_rules.py
docs/: COMMAND_LINE.md
scripts/: build.py  build.sh  build_compiler.py  bump_version.py  dev_setup.py  install_dev.py  test.py
tests/: test_branding_templates.py  test_dependency_resolution.py  test_django_generation.py  test_file_support.py  test_output_paths.py  test_packaging_metadata.py
