[metadata]
name = init-app
version = 3.1.0
description = Interactive Python CLI for scaffolding backend projects.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = TechQuanta
author_email = techquanta.community@gmail.com
url = https://github.com/TechQuanta/init-app
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    colorama>=0.4.6
    pyfiglet>=1.0.4
    readchar>=4.2.1
    python-dotenv>=1.2.1
    jinja2>=3.1.0
    django>=4.2,<6.0

[options.packages.find]
include =
    create_app
    create_app.*

[options.package_data]
create_app =
    common/*.tpl
    common/template/*.tpl
    common/static/css/*.tpl
    common/static/scripts/*.tpl

[options.entry_points]
console_scripts =
    init-app = create_app.engine.cli:main

[options.extras_require]
dev =
    pytest>=7.0.0
    black>=24.0.0
    isort>=6.0.0

[tool:pytest]
testpaths = tests

[isort]
profile = black

[flake8]
max-line-length = 88
